--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Single Page WebApps with Angular.JS</title>
+        <title>Angular.JS Presentation</title>
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -37,7 +37,7 @@
 
     <body>
 
-       <div class="reveal">
+        <div class="reveal">
 
             <div class="slides">
                 <section data-markdown="slides/index.md"></section>
