--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
+<head>
+	<meta charset="utf-8">
 
-        <title>Angular.JS Presentation</title>
+	<title>Single Page WebApps with Angular.JS</title>
 
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
-    
-        <link rel="stylesheet" href="css/theme.css" id="theme">
-    
+	<link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
 
-        <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="bower_components/reveal.js/lib/css/zenburn.css" id="highlight-theme">
+	<link rel="stylesheet" href="css/theme.css" id="theme">
 
-        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
-        <script>
+
+	<!-- For syntax highlighting -->
+	<link rel="stylesheet" href="bower_components/reveal.js/lib/css/zenburn.css" id="highlight-theme">
+
+	<!-- If the query includes 'print-pdf', use the PDF print sheet -->
+	<script>
           if( window.location.search.match( /print-pdf/gi ) ) {
             var link = document.createElement( 'link' );
                 link.rel = 'stylesheet';
@@ -30,59 +30,184 @@
             }
         </script>
 
-        <!--[if lt IE 9]>
+	<!--[if lt IE 9]>
         <script src="lib/js/html5shiv.js"></script>
         <![endif]-->
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <div class="reveal">
+	<div class="reveal">
 
-            <div class="slides">
-                <section data-markdown="slides/index.md"></section>
-                        <section>
-                <section data-markdown="slides/what-is-angularjs.md"></section>
-            </section>
-            <section>
-                <section data-markdown="slides/what-give-us-angularjs.md"></section>
-                <section data-markdown="slides/databinding-out-of-the-box.md"></section>
-                <section data-markdown="slides/what-is-databinding.md"></section>
-                <section data-markdown="slides/databinding-example.md"></section>
-            </section>
-            <section>
-                <section data-markdown="slides/controller.md"></section>
-                <section data-markdown="slides/controller-definition.md"></section>
-                <section data-markdown="slides/controller-usage.md"></section></section>
-            <section>
-                <section data-markdown="slides/filters.md"></section>
-                <section data-markdown="slides/filter-definition.md"></section>
-                <section data-markdown="slides/filter-usage.md"></section>
-            </section>
-            <section>
-                <section data-markdown="slides/routing.md"></section>
-                <section data-markdown="slides/routing-definition.md"></section>
-                <section data-markdown="slides/routing-usage.md"></section>
-            </section>
-            <section>
-                <section data-markdown="slides/services.md"></section>
-                <section data-markdown="slides/services-definition.md"></section>
-                <section data-markdown="slides/services-usage.md"></section>
-            </section>
-            <section>
-                <section data-markdown="slides/directives.md"></section>
-                <section data-markdown="slides/directives-definition.md"></section>
-                <section data-markdown="slides/directives-usage.md"></section>
-            </section>
-                <section data-markdown="slides/questions.md"></section>
-                <section data-markdown="slides/thank-you.md"></section>
-            </div>
+		<div class="slides">
 
-        </div>
 
-        <script src="bower_components/reveal.js/lib/js/head.min.js"></script>
-        <script src="bower_components/reveal.js/js/reveal.min.js"></script>
-        <script>
+
+
+			<section data-markdown="slides/index.md"></section>
+
+
+
+
+
+
+
+			<section>
+
+
+				<section data-markdown="slides/what-is-angularjs.md"></section>
+
+
+
+
+				<section data-markdown="slides/databinding-out-of-the-box.md"></section>
+
+
+
+			</section>
+
+
+
+
+			<section data-markdown="slides/application-structure.md"></section>
+
+
+
+
+
+
+
+			<section>
+
+
+				<section data-markdown="slides/controller.md"></section>
+
+
+
+
+				<section data-markdown="slides/controller-definition.md"></section>
+
+
+
+
+				<section data-markdown="slides/controller-usage.md"></section>
+
+
+
+			</section>
+
+
+
+
+			<section>
+
+
+				<section data-markdown="slides/filters.md"></section>
+
+
+
+
+				<section data-markdown="slides/filter-definition.md"></section>
+
+
+
+
+				<section data-markdown="slides/filter-usage.md"></section>
+
+
+
+			</section>
+
+
+
+
+			<section>
+
+
+				<section data-markdown="slides/routing.md"></section>
+
+
+
+
+				<section data-markdown="slides/routing-definition.md"></section>
+
+
+
+
+				<section data-markdown="slides/routing-usage.md"></section>
+
+
+
+			</section>
+
+
+
+
+			<section>
+
+
+				<section data-markdown="slides/services.md"></section>
+
+
+
+
+				<section data-markdown="slides/services-definition.md"></section>
+
+
+
+
+				<section data-markdown="slides/services-usage.md"></section>
+
+
+
+			</section>
+
+
+
+
+			<section>
+
+
+				<section data-markdown="slides/directives.md"></section>
+
+
+
+
+				<section data-markdown="slides/directives-definition.md"></section>
+
+
+
+
+				<section data-markdown="slides/directives-usage.md"></section>
+
+
+
+			</section>
+
+
+
+
+			<section data-markdown="slides/questions.md"></section>
+
+
+
+
+
+
+
+			<section data-markdown="slides/thank-you.md"></section>
+
+
+
+
+
+		</div>
+
+	</div>
+
+	<script src="bower_components/reveal.js/lib/js/head.min.js"></script>
+	<script src="bower_components/reveal.js/js/reveal.min.js"></script>
+	<script>
             // Configure Reveal
             // Full list of configuration options available here:
             // https://github.com/hakimel/reveal.js#configuration
@@ -111,6 +236,6 @@
             });
         </script>
 
-    </body>
+</body>
 
 </html>
