--- a/index.html
+++ b/index.html
@@ -40,170 +40,47 @@
 	<div class="reveal">
 
 		<div class="slides">
-
-
-
-
 			<section data-markdown="slides/index.md"></section>
-
-
-
-
-
-
-
 			<section>
-
-
 				<section data-markdown="slides/what-is-angularjs.md"></section>
-
-
-
-
+			</section>
+			<section>
+				<section data-markdown="slides/what-give-us-angularjs.md"></section>
 				<section data-markdown="slides/databinding-out-of-the-box.md"></section>
-
-
-
+				<section data-markdown="slides/what-is-databinding.md"></section>
+				<section data-markdown="slides/databinding-example.md"></section>
 			</section>
-
-
-
-
-			<section data-markdown="slides/application-structure.md"></section>
-
-
-
-
-
-
-
 			<section>
-
-
 				<section data-markdown="slides/controller.md"></section>
-
-
-
-
 				<section data-markdown="slides/controller-definition.md"></section>
-
-
-
-
 				<section data-markdown="slides/controller-usage.md"></section>
-
-
-
 			</section>
-
-
-
-
 			<section>
-
-
 				<section data-markdown="slides/filters.md"></section>
-
-
-
-
 				<section data-markdown="slides/filter-definition.md"></section>
-
-
-
-
 				<section data-markdown="slides/filter-usage.md"></section>
-
-
-
 			</section>
-
-
-
-
 			<section>
-
-
 				<section data-markdown="slides/routing.md"></section>
-
-
-
-
 				<section data-markdown="slides/routing-definition.md"></section>
-
-
-
-
 				<section data-markdown="slides/routing-usage.md"></section>
-
-
-
 			</section>
-
-
-
-
 			<section>
-
-
 				<section data-markdown="slides/services.md"></section>
-
-
-
-
 				<section data-markdown="slides/services-definition.md"></section>
-
-
-
-
 				<section data-markdown="slides/services-usage.md"></section>
-
-
-
 			</section>
-
-
-
-
 			<section>
-
-
 				<section data-markdown="slides/directives.md"></section>
-
-
-
-
 				<section data-markdown="slides/directives-definition.md"></section>
-
-
-
-
 				<section data-markdown="slides/directives-usage.md"></section>
-
-
-
 			</section>
-
-
-
-
 			<section data-markdown="slides/questions.md"></section>
-
-
-
-
-
-
-
 			<section data-markdown="slides/thank-you.md"></section>
-
-
-
-
-
 		</div>
 
 	</div>
+
 
 	<script src="bower_components/reveal.js/lib/js/head.min.js"></script>
 	<script src="bower_components/reveal.js/js/reveal.min.js"></script>
